[gd_scene load_steps=2 format=3 uid="uid://c35vc0xyg14g8"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_7lv13"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_7lv13")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HallowednessBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TotalItemsLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ObjectiveItemsLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
